opa-gatekeeper/nonroot/k8spspnonroot-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPNonRoot
metadata:
  name: block-root-user
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["argoproj.io"]
        kinds: ["Rollout"]
